all pages finish

--- a/workers.html
+++ b/workers.html
@@ -17,8 +17,8 @@
         <nav class="col-7 main-nav">
           <ul>
             <li class="main-nav__nav-item"><a href="index.html">Главная</a></li>
-            <li class="main-nav__nav-item"><a href="workers.html">Разнорабочие</a></li>
-            <li class="main-nav__nav-item"><a href="#" class="active">Грузчики</a></li>
+            <li class="main-nav__nav-item"><a href="#" class="active">Разнорабочие</a></li>
+            <li class="main-nav__nav-item"><a href="loaders.html">Грузчики</a></li>
             <li class="main-nav__nav-item"><a href="vacancy.html">Вакансии</a></li>
           </ul>
         </nav>
@@ -39,9 +39,9 @@
     <!-- .container -->
   </header>
   <main>
-    <div class="top-slide">
+    <div class="top-slide top-slide__workers">
       <div class="container">
-        <h1>Подбор грузчиков уже через 4 часа после заявки с экономией 40% денег!</h1>
+        <h1>Линейный персонал: разнорабочие, подсобники, упаковщики. Предоставляем рабочую силу с экономией до 40% бюджета</h1>
         <div class="row">
           <ul class="col-8 top-slide__advantages">
             <li class="top-slide__advantages-item">Все четко вовремя. Без халтуры и пьянки</li>
@@ -50,14 +50,14 @@
             <!-- /.top-slider__advantages-item -->
             <li class="top-slide__advantages-item">Деньги за результат</li>
             <!-- /.top-slider__advantages-item -->
-            <li class="top-slide__advantages-item">Рабочий процесс под нашим контролем</li>
+            <li class="top-slide__advantages-item">Контроль рабочего процесса </li>
             <!-- /.top-slider__advantages-item -->
           </ul>
           <!-- /.top-slider__advantages col-6 -->
           <div class="col-4 main-feedback">
             <div class="main-feedback__feedback-form">
 
-              <div class="main-feedback__feedback-head">Заказать грузчиков и разнорабочих</div>
+              <div class="main-feedback__feedback-head">Заказать подсобников и разнорабочих</div>
               <form action="#">
                 <fieldset>
                   <label for="phone-input-main-feedback">Оставьте ваш телефон</label>
@@ -67,7 +67,7 @@
               </form>
               <div class="main-feedback__phone">
                 <span class="main-feedback__phone-head">Или позвоните нам:</span>
-                <span class="main-feedback__phone-number">+7 978 093-06-45</span>
+                <span class="main-feedback__phone-number">+7 495 532-56-54</span>
               </div>
             </div>
             <!-- .main-feedback__feedback-form -->
@@ -82,7 +82,7 @@
 
     <div class="advantages advantages--white"> 
       <div class="container">
-        <h2>4 причины заказать у нас:</h2>
+        <h2>Вот почему клиенты работают именно с нами:</h2>
         <div class="row">
           <div class="advantages__advantages-item col-3">
             <img src="images/icon-watch.png" alt="">
@@ -283,26 +283,26 @@
     
     <div class="advantages advantages--dark"> 
       <div class="container">
-        <h2>Компания «Град Персонал» в цифрах и фактах:</h2>
+        <h2>О нас – в цифрах и фактах:</h2>
         <div class="row">
           <div class="advantages__advantages-item col-3">
             <img src="images/icon-people.png" alt="">
-            <p>Подбор бригады проверенных работников до 50 человек</p>
+            <p>Подбираем бригады до 50 человек за 1 день </p>
           </div>
           <!-- /.advantages__advantages-item col-3 -->
           <div class="advantages__advantages-item col-3">
             <img src="images/icon-computer.png" alt="">
-            <p>Используем уникальную IT-систему для подбора рабочих и базу из 3000 резюме!</p>
+            <p>Уникальная IT-система для проверки и подбора рабочих</p>
           </div>
           <!-- /.advantages__advantages-item col-3 -->
           <div class="advantages__advantages-item col-3">
             <img src="images/icon-gear.png" alt="">
-            <p>Работаем по проверенной (7 лет опыта) технологии крупной сети «Персональное решение».</p>
+            <p>Бизнес-технология отработана в течение 7 лет практики</p>
           </div>
           <!-- /.advantages__advantages-item col-3 -->
           <div class="advantages__advantages-item col-3">
             <img src="images/icon-purse.png" alt="">
-            <p>Экономим до 40% затрат на грузчиков</p>
+            <p>40% денег экономим на услугах рабочих</p>
           </div>
           <!-- /.advantages__advantages-item col-3 -->
         </div>
@@ -364,4 +364,4 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/main.js"></script>
 </body>
-</html>
+</html>workers
